--- a/webClientTest/css/login.css
+++ b/webClientTest/css/login.css
@@ -1,21 +1,41 @@
-.font-size-13{
-     font-size:13px;
- }
-/*html, body {*/
-    /*height: 100%;*/
-/*}*/
-.box-parent{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    height: 20rem;
+.font-size-20 {
+    font-size: 20px;
 }
-
-.box{
+.box-text{
+    border-radius: 5px;
+}
+.box-first{
     display: flex;
-    width:50%;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+.box-parent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20rem;
+    width: 400px;
+    background: #f1f1f1;
+    border-radius: 10px;
+    box-shadow:
+            inset 0 5px white,
+            inset 0 -5px #bbb,
+            inset 5px 0 #d7d7d7,
+            inset -5px 0 #d7d7d7;
+}
+.box {
+    display: flex;
+    width: 50%;
     height: 50%;
     justify-content: center;
     align-items: center;
+}
+.error{
+    color: orangered;
+}
+
+.a-text-decoration{
+    color: #428bca;
+    text-decoration:none;
 }
