--- a/webClientTest/css/login.css
+++ b/webClientTest/css/login.css
@@ -25,7 +25,7 @@
     justify-content: center;
     align-items: center;
 }
-.a-text-decoration{
-    color: #428bca;
-    text-decoration:none;
-}
+/*.a-text-decoration{*/
+    /*color: #428bca;*/
+    /*text-decoration:none;*/
+/*}*/
