--- a/webClientTest/css/index.css
+++ b/webClientTest/css/index.css
@@ -1,3 +1,12 @@
+
+.a-login{
+    color: #428bca;
+}
+.hidden{
+    visibility: hidden;
+}
+
+/*search*/
 .box-first-index {
     display: flex;
     justify-content: center;
