--- a/webClientTest/css/login.css
+++ b/webClientTest/css/login.css
@@ -25,6 +25,14 @@
     justify-content: center;
     align-items: center;
 }
+@media only screen and (max-width: 500px){
+    .box-first{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+    }
+}
 /*.a-text-decoration{*/
     /*color: #428bca;*/
     /*text-decoration:none;*/
